# skills-optimization

./: .gitignore  README.md  dataset.md  pyproject.toml
.agent/workflows/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.augment/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
exa-search/: SKILL.md
exa-search/references/: REFERENCE.md
experiments/: EXPERIMENT_REPORT.md  bbh_extended_experiment_results.json  bbh_full_experiment_results.json  bbh_scaled_experiment_results.json  bbh_scaled_results.json  bbh_scaled_validation_results.json  bbh_validation_results.json  debug_gradient_issue.py  debug_loss_nan.py  debug_reasoning_update.py  debug_tokenizer.py  run_bbh.py  run_bbh_extended_experiment.py  run_bbh_full_experiment.py  run_bbh_mini.py  run_bbh_readable_experiment.py  run_bbh_scaled.py  run_bbh_scaled_experiment.py  run_bbh_scaled_validation.py  run_bbh_validation.py  run_gsm8k.py  test_generation.py  test_gradient_stability.py  visualize_training_data.py
openspec/: project.md
openspec/specs/skill-optimizer/: spec.md
openspec/specs/system-architecture/: spec.md
referenceSolution/GreaTer/: README.md  requirements.txt
referenceSolution/GreaTer/exp_implement/: main.py
referenceSolution/GreaTer/experiments/: main.py  run_gemma2_mcq.sh  run_llama3_all.sh
skillExample/: SKILL.md
src/skill_opt/core/: config.py  (+2 more)
tests/: solutionImpelement.code-workspace  test_bbh_loading.py  test_core_import.py  test_experiment_validation.py  test_greater_core.py  test_greater_fixes.py  test_optimizer.py  test_refined_greater.py
(+220 files in other folders)
