[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill_opt"
version = "0.1.0"
description = "Agent Skill Optimization System defined in openspec/project.md"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Deepmind Advanced Agentic Coding Team", email = "no-reply@google.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]
